fixed navbar overlap

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 9999;
   }
   
 .navbar li {
